--- a/HaoChiBao/app/src/main/res/layout/activity_mine_home_page.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_mine_home_page.xml
@@ -8,23 +8,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:paddingBottom="15dp"
+        >
         <ImageView
             android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/left_arrow_gray"
-            android:paddingLeft="10dp"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"/>
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="我的主页"
-           android:textColor="@color/textBlack"
-           android:textSize="@dimen/font_40"
-           android:layout_centerInParent="true"
-           />
+            android:paddingLeft="11.5dp"
+            android:layout_centerVertical="true"
+            android:paddingBottom="16.5dp"
+            android:paddingTop="16dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="我的主页"
+            android:layout_centerVertical="true"
+            android:textColor="@color/textBlack"
+            android:textSize="@dimen/font_40"
+            android:layout_centerInParent="true"
+            />
     </RelativeLayout>
     <LinearLayout
         android:layout_marginTop="12dp"
@@ -83,6 +87,7 @@
 
     </LinearLayout>
     <RelativeLayout
+        android:id="@+id/mine_collection"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的收藏"
-            android:textSize="@dimen/font_32"
+            android:textSize="@dimen/font_40"
             android:layout_alignParentLeft="true"/>
         <ImageView
             android:layout_width="wrap_content"
@@ -116,7 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的足迹"
-            android:textSize="@dimen/font_32"
+            android:textSize="@dimen/font_40"
             android:layout_alignParentLeft="true"/>
         <ImageView
             android:layout_width="wrap_content"
@@ -125,6 +130,7 @@
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/mine_page_btn"
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -137,7 +143,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的主页"
-            android:textSize="@dimen/font_32"
+            android:textSize="@dimen/font_40"
             android:layout_alignParentLeft="true"/>
         <ImageView
             android:layout_width="wrap_content"
@@ -168,12 +174,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="夜间模式"
-            android:textSize="@dimen/font_32"
+            android:textSize="@dimen/font_40"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"/>
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/setting"
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -186,7 +193,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="设置"
-            android:textSize="@dimen/font_32"
+            android:textSize="@dimen/font_40"
             android:layout_alignParentLeft="true"/>
         <ImageView
             android:layout_width="wrap_content"
