--- a/HaoChiBao/app/src/main/res/layout/dialog_clean_cache.xml
+++ b/HaoChiBao/app/src/main/res/layout/dialog_clean_cache.xml
@@ -2,5 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal">
+    <TextView
+        android:layout_marginTop="33dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="提示"
+        android:textSize="@dimen/font_44"
+        android:textColor="@color/textBlack"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="您确定要清除所有缓存数据吗？"
+        android:gravity="center"
+        android:textColor="@color/textBlack"
+        android:textSize="@dimen/font_40"
+        android:layout_marginTop="12dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/borderGray"
+        android:layout_marginTop="30.5dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_marginTop="23dp"
+            android:layout_marginBottom="22dp"
+            android:id="@+id/clean_cancel"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="取消"
+            android:textSize="@dimen/font_44"
+            android:textColor="@color/iconLightBlue"
+            android:gravity="center_horizontal"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/borderGray"/>
+        <TextView
+            android:layout_marginTop="23dp"
+            android:layout_marginBottom="22dp"
+            android:id="@+id/clean_btn"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="清除"
+            android:textSize="@dimen/font_44"
+            android:textColor="@color/iconLightBlue"
+            android:gravity="center_horizontal"/>
+    </LinearLayout>
 </LinearLayout>
