退出登录弹出框

--- a/HaoChiBao/app/src/main/res/layout/activity_setting.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_setting.xml
@@ -168,6 +168,7 @@
                     android:layout_alignParentEnd="true"/>
             </RelativeLayout>
             <TextView
+                android:id="@+id/exit_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="退出当前账号"
