--- a/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_recommend.xml
@@ -211,7 +211,7 @@
         android:background="@color/lineGray"/>
 
     <ListView
-        android:id="@+id/sub_list_view"
+        android:id="@+id/recommend_list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
