--- a/HaoChiBao/app/src/main/res/layout/item_recommend.xml
+++ b/HaoChiBao/app/src/main/res/layout/item_recommend.xml
@@ -50,6 +50,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    style="@style/roomRatingBar"
+                    android:rating="4.5"
+                    android:numStars="5"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -144,6 +151,13 @@
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="5dp"
+                    style="@style/roomRatingBar"
+                    android:rating="4.5"
+                    android:numStars="5"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
