发现 我的推荐

--- a/HaoChiBao/app/src/main/res/layout/activity_mytuijian.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_mytuijian.xml
@@ -25,19 +25,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian"
+                android:background="@drawable/mytuijian"
                 android:gravity="center"
-                android:text="好吃宝推荐"
-                android:textColor="@color/mainRed"
+                android:text="本站推荐"
+                android:textColor="@color/white"
                 android:textSize="@dimen/font_36" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian_two"
+                android:background="@drawable/mytuijian_two"
                 android:gravity="center"
                 android:text="我要推荐"
-                android:textColor="@color/white"
+                android:textColor="@color/mainRed"
                 android:textSize="@dimen/font_36" />
         </LinearLayout>
 
@@ -49,14 +49,17 @@
             android:layout_margin="10dp"
             android:background="@drawable/tuijian_three"
             android:padding="5dp"
-            android:text="搜索"
+            android:text="发表"
             android:textColor="@color/mainRed"
             android:textSize="@dimen/font_36" />
 
     </RelativeLayout>
-
     <ListView
-        android:id="@+id/item"
+        android:id="@+id/tuijian_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="wrap_content">
+
+    </ListView>
+
+
 </LinearLayout>
