--- a/HaoChiBao/app/src/main/res/layout/activity_find.xml
+++ b/HaoChiBao/app/src/main/res/layout/activity_find.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/borderGray"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -10,11 +10,14 @@
         android:layout_height="60dp"
         android:background="@color/mainRed">
 
-        <ImageView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableRight="@mipmap/home_sw_resize"
             android:padding="20dp"
-            android:src="@mipmap/left_arrow_white" />
+            android:text="重庆"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_36" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -23,40 +26,38 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tex1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian"
+                android:background="@drawable/find"
                 android:gravity="center"
-                android:text="好吃宝推荐"
+                android:text="最新"
                 android:textColor="@color/mainRed"
                 android:textSize="@dimen/font_36" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/tuijian_two"
+                android:layout_toRightOf="@id/tex1"
+                android:background="@drawable/find_two"
                 android:gravity="center"
-                android:text="我要推荐"
+                android:text="关注"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_36" />
         </LinearLayout>
 
-        <TextView
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="10dp"
-            android:background="@drawable/tuijian_three"
-            android:padding="5dp"
-            android:text="搜索"
-            android:textColor="@color/mainRed"
-            android:textSize="@dimen/font_36" />
-
+            android:padding="20dp"
+            android:src="@mipmap/particulars_share" />
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/item"
+        android:id="@+id/find_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="wrap_content">
+
+    </ListView>
 </LinearLayout>
